tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__main_composition_test__main_composition_ascii_layout.snap
---
source: tests/snapshot_tests/screens/main_composition_test.rs
expression: ascii_backend
---
"                                                                                                    "
"  [1] All                          [2]     Sort: [ Created v ]     GitHub Account                   "
"                                                                   octocat                          "
"  [2] Favorites                    [1]     GitHub Account  <     *                                  "
"  [3] Expired                      [0]     octocat                                                  "
"                                         -----------------------   -----------------                "
"                                           Personal Email                                           "
"                                           alice@example.com       Login                            "
"                                         -----------------------                                    "
"                                                                   Username:                        "
"                                                                     octocat                        "
"                                                                                                    "
"                                                                   Password:                        "
"                                                                     ••••••••                       "
"                                                                                                    "
"                                                                   [work]  [personal]               "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"----------------------------------------------------------------------------------------------------"
"  Ctrl+K Search  Ctrl+G Gen  Ctrl+P Cfg  Q Quit                          v0.7.3 │ - Not configured  "
