tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__main_composition_test__main_composition_batch_tag_overlay.snap
---
source: tests/snapshot_tests/screens/main_composition_test.rs
expression: backend
---
"┌ Batch Tags — 2 selected ─────────────────────┐          │                                         "
"│┌ Add Tag: ──────────────────────────────────┐│                                                    "
"││█ Enter to add                              ││ [ Created   GitHub Account                         "
"│└────────────────────────────────────────────┘│b Account    octocat                                "
"│┌ Current Tags: ─────────────────────────────┐│at         ★                                        "
"││  (no tags)                                 ││──────────                                          "
"│└────────────────────────────────────────────┘│nal Email    ────────────────────                   "
"│┌ Existing Tags: ────────────────────────────┐│@example.c                                          "
"││  (no tags)                                 ││──────────   Login                                  "
"│└────────────────────────────────────────────┘│                                                    "
"│┌────────────────────────────────────────────┐│             Username:                              "
"││ Done                                       ││               octocat                              "
"│└────────────────────────────────────────────┘│                                                    "
"└──────────────────────────────────────────────┘             Password:                              "
"                                                               ••••••••                             "
"                                                                                                    "
"                                                           [work]  [personal]                       "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"  Ctrl+K Search  Ctrl+G Gen  Ctrl+P Cfg  Q Quit                          v0.7.3 │ — Not configured  "
