tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__main_composition_test__main_composition_destructive_confirm_overlay.snap
---
source: tests/snapshot_tests/screens/main_composition_test.rs
expression: backend
---
"                                        │                       │                                   "
"    All                           2  │  Sort: [ Created ▼ ]  │  GitHub Account                   "
"                                        │                       │  octocat                          "
"    Favorites                     1  │  󰀋 GitHub Account     │★                                  "
"    Expired                       0  │  octocat              │                                   "
"                                        │───────────────────────│  ─────────────────                "
"                                        │  󰀋 Personal Email     │                                   "
"                                        │  alice@example.com    │  Login                            "
"                                        │───────────────────────│                                   "
"                          ┌────────────────── Warning ───────────────────┐e:                        "
"                          │Permanently delete "GitHub Account"?          │at                        "
"                          │Cannot be undone. Password will be permanently│                          "
"                          │deleted.                                      │d:                        "
"                          │----------------------------------------------│•••                       "
"                          └──────────────────────────────────────────────┘                          "
"                                        │                       │  [work]  [personal]               "
"                                        │                       │                                   "
"                                        │                       │                                   "
"                                        │                       │                                   "
"                                        │                       │                                   "
"                                        │                       │                                   "
"                                        │                       │                                   "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"  Ctrl+K Search  Ctrl+G Gen  Ctrl+P Cfg  Q Quit                          v0.7.3 │ — Not configured  "
