tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__main_composition_test__main_composition_detail_focused.snap
---
source: tests/snapshot_tests/screens/main_composition_test.rs
expression: backend
---
"                                        │                 │                                         "
"  [1] All (2)                        ◄                                                              "
"                                           Sort: [ Created   GitHub Account                         "
"  [2] Favorites (1)                        GitHub Account    octocat                                "
"  [3] Expired (0)                          octocat         ★                                        "
"                                         ─────────────────                                          "
"                                           Personal Email    ────────────────────                   "
"                                           alice@example.c                                          "
"                                         ─────────────────   Login                                  "
"                                                                                                    "
"                                                             Username:                              "
"                                                               octocat                              "
"                                                                                                    "
"                                                             Password:                              "
"                                                               ••••••••                             "
"                                                                                                    "
"                                                           [work]  [personal]                       "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"  c CopyPwd  u CopyUser  p Show/Hide  e Edit  d Delete  F1 Help          v0.7.3 │ — Not configured  "
