tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__main_composition_test__main_composition_error_dialog_overlay.snap
---
source: tests/snapshot_tests/screens/main_composition_test.rs
expression: backend
---
"All (2)                                │  Sort: [ Created│  GitHub Account                          "
"☆ Favorites (1)                           GitHub Account20  octocat                                 "
"Expired                                   octocat         ★                                         "
"                                                                                                    "
"                                          Personal Email20  ─────────────────────                   "
"                                          alice@example.co                                          "
"                                                            Login                                   "
"                                                                                                    "
"                      ┌─────────────────────── Error ────────────────────────┐                      "
"                      │      Unable to upload the latest vault snapshot.     │                      "
"                      │                                                      │                      "
"                      │             HTTP 409 conflict after retry            │                      "
"                      │                                                      │                      "
"                      │                     Retry    Exit                    │                      "
"                      └──────────────────────────────────────────────────────┘                      "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"  ⌘K Search  N New  E Edit  D Delete  F1 Help │ v0.7.3 │ — Not configured                           "
