tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__main_composition_test__main_composition_generator_overlay.snap
---
source: tests/snapshot_tests/screens/main_composition_test.rs
expression: backend
---
"                                        │  Sort: [ Created│  GitHub Account                         "
"  All (2)                            ◄     GitHub Account    octocat                                "
"                      ┌──────────────────────────────────────────────────────┐                      "
"  Favorites (1)       │  Password Generator                              ✕   │                      "
"  Expired (0)         │──────────────────────────────────────────────────────│───                   "
"                      │                                                      │                      "
"                      │  Style [ Random ]  [ Memorable ]  [ PIN ]            │                      "
"                      │──────────────────────────────────────────────────────│                      "
"                      │                                                      │                      "
"                      │  Length [ 16 ]  [-] █░░░░░░░░░░░ [+]                 │                      "
"                      │                                                      │                      "
"                      │  [✓] Uppercase  [✓] Lowercase  [✓] Digits  [✓]       │                      "
"                      │Symbols                                               │                      "
"                      │                                                      │                      "
"                      │──────────────────────────────────────────────────────│                      "
"                      │                                                      │                      "
"                      │  CorrectHorse42!                                     │                      "
"                      │  Strength: ████████████░░░░ Strong                   │                      "
"                      │                                                      │                      "
"                      │──────────────────────────────────────────────────────│                      "
"                      │                                                      │                      "
"                      │      [ Regenerate ]          [ Copied to clipboard ] │                      "
"──────────────────────│                                                      │──────────────────────"
"  Ctrl+K Search  N New└──────────────────────────────────────────────────────┘                      "
