tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__main_composition_test__main_composition_help_overlay.snap
---
source: tests/snapshot_tests/screens/main_composition_test.rs
expression: backend
---
"                      ┌──────────────────────── Help ────────────────────────┐                      "
"  [1] All (2)         │ Navigation                │  Multiselect             │                      "
"                      │  ↑/k       Move up        │   Space                  │                      "
"  [2] Favorites (1)   │Select/Deselect                                       │                      "
"  [3] Expired (0)     │  ↓/j       Move down      │   j/k       Move up/down │                      "
"                      │  Tab       Switch panel   │   a         Select       │                      "
"                      │all/Deselect                                          │───                   "
"                      │  Enter     Confirm        │   d         Batch delete │                      "
"                      │  Esc       Back/Close     │   t         Batch tag    │                      "
"                      │                           │   Esc/v     Exit         │                      "
"                      │multiselect                                           │                      "
"                      │ Actions                   │                          │                      "
"                      │  Ctrl+K    Search         │  Tag Management          │                      "
"                      │  n         New            │   m         Add tag      │                      "
"                      │  e         Edit           │   r         Rename tag   │                      "
"                      │  d         Delete         │   d         Delete tag   │                      "
"                      │  f         Favorite       │   s         Save         │                      "
"                      │  s         Sort           │                          │                      "
"                      │  v         Multiselect mode│  Sync                   │                      "
"                      │  g         Settings       │   Ctrl+R    Manual sync  │                      "
"                      │  l         Audit log      │                          │                      "
"                      │  q         Quit           │                          │                      "
"──────────────────────│                           │                          │──────────────────────"
"  Ctrl+K Search  Ctrl+└──────────────────────────────────────────────────────┘3 │ — Not configured  "
