tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__main_composition_test__main_composition_password_history_overlay.snap
---
source: tests/snapshot_tests/screens/main_composition_test.rs
expression: backend
---
"                                        │                       │                                   "
"  [1] All (2)                        ◄  │                       │                                   "
"                                        │  Sort: [ Created ▼ ]  │  GitHub Account                   "
"  [2] Favorites (1)                     │                       │  octocat                          "
"  [3] Expired (0)                       │   GitHub Account  ◀   │★                                  "
"                                        │   octocat             │                                   "
"                                        │───────────────────────│  ─────────────────                "
"                                        │   Personal Email      │                                   "
"                                        │   alice@example.com   │  Login                            "
"                      ┌ Password History — GitHub Account ───────────────────┐                      "
"                      │ 2024-06-15 12:00  Initial password  [Copy]           │                      "
"                      │ 2024-06-15 12:00  Rotated after compromise alert     │                      "
"                      │[Copy]                                                │                      "
"                      │ 2 records (max 10 retained)                          │                      "
"                      └ ✕ ───────────────────────────────────────────────────┘                      "
"                                        │                       │                                   "
"                                        │                       │[work]  [personal]                 "
"                                        │                       │                                   "
"                                        │                       │                                   "
"                                        │                       │                                   "
"                                        │                       │                                   "
"                                        │                       │                                   "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"  c CopyPwd  u CopyUser  p Show/Hide  e Edit  d Delete  F1 Help          v0.7.3 │ — Not configured  "
