tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__main_composition_test__main_composition_search_no_results.snap
---
source: tests/snapshot_tests/screens/main_composition_test.rs
expression: backend
---
"                                        │                       │                                   "
"    All                           2  │  🔍 Search: missing_  │                                   " Hidden by multi-width symbols: [(44, " ")]
"                                        │                       │                                   "
"    Favorites                     1  │                       │                                   "
"    Expired                       0  │                       │                                   "
"                                        │                       │                                   "
"                                        │                       │                                   "
"                                        │                       │                                   "
"                                        │                       │                                   "
"                                        │                       │                                   "
"                                        │         🔍            │                 🔐                " Hidden by multi-width symbols: [(51, " "), (83, " ")]
"                                        │                       │                                   "
"                                        │   No results found    │  Select a password to view details"
"                                        │                       │     Press Enter to view details   "
"                                        │    No matches for     │                                   "
"                                        │       'missing'       │                                   "
"                                        │                       │                                   "
"                                        │                       │                                   "
"                                        │                       │                                   "
"                                        │                       │                                   "
"                                        │                       │                                   "
"                                        │                       │                                   "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"  Ctrl+K Search  Ctrl+G Gen  Ctrl+P Cfg  Q Quit                v0.8.0-preview.3 │ — Not configured  "
